--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>时迁`个人引导页</title>
@@ -361,5 +362,14 @@ background-attachment: fixed;"
 				
 				<script src="js/jquery-1.7.2.js"></script>
 				<script src="js/index.js"></script>
-				</body>
+						<head>
+						<meta charset="utf-8">
+						<title></title>
+					</head>
+					<body>
+						<!-- 导入jquery库 -->
+						<script src="//lib.baomitu.com/jquery/3.4.1/jquery.min.js"></script>
+						<!-- 音乐播放器 -->
+						<script src="https://myhkw.cn/player/js/player.js" id="myhk" key="demo" m="1"></script>
+					</body>
 				</html>
